--- a/markpad/templates/home.html
+++ b/markpad/templates/home.html
@@ -6,6 +6,6 @@
     <!-- ici mettre une image avec un peu de texte, pour pas que la page d'acceuil soit trop vide. -->
 </div>
 
-<a href="{{url_for('doc_new')}}"><button value="create new document"></a>
+<a href="{{url_for('doc_new')}}"><button>create new document</button></a>
 
-{% end block %}
+{% endblock %}
