First functionnal draft for single-user editing
Documents may be started, edited, and redered. The micro-commits system is functionnal

TODO: Synchronize microcommits between browser. That's the most immediate thing to do.

--- a/markpad/templates/base.html
+++ b/markpad/templates/base.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <title>tpassist</title>
+        <title>Markpad</title>
         <link rel="stylesheet" href="/static/screen.css">
+        <link rel="stylesheet" href="/static/pygments.css">
+        <script src="/static/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.01/ace.js"></script>
     </head>
     <body>
