--- a/markpad/static/screen.css
+++ b/markpad/static/screen.css
@@ -18,4 +18,9 @@ h1 {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 95%; }
+  height: 95%;
+  width: 45%; }
+
+#md-preview {
+  float: right;
+  width: 50%; }
