--- a/markpad/static/screen.css
+++ b/markpad/static/screen.css
@@ -1,7 +1,64 @@
+.attention, .caution, .warning {
+  border-top: 1px solid #dba100;
+  border-bottom: 1px solid #dba100;
+  background-color: #ffcd42;
+  padding-left: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px; }
+  .attention p, .caution p, .warning p {
+    margin-top: 2px;
+    margin-bottom: 2px;
+    color: #a87c00; }
+  .attention .admonition-title, .caution .admonition-title, .warning .admonition-title {
+    font-weight: bold;
+    font-size: 1.1em;
+    color: #755600; }
+
+.note, .tip, .hint {
+  border-top: 1px solid #8282ff;
+  border-bottom: 1px solid #8282ff;
+  background-color: #e8e8ff;
+  padding-left: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px; }
+  .note p, .tip p, .hint p {
+    margin-top: 2px;
+    margin-bottom: 2px;
+    color: #4f4fff; }
+  .note .admonition-title, .tip .admonition-title, .hint .admonition-title {
+    font-weight: bold;
+    font-size: 1.1em;
+    color: #1c1cff; }
+
+.danger, .error, .important {
+  border-top: 1px solid #961717;
+  border-bottom: 1px solid #961717;
+  background-color: #e03333;
+  padding-left: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px; }
+  .danger p, .error p, .important p {
+    margin-top: 2px;
+    margin-bottom: 2px;
+    color: #6a1010; }
+  .danger .admonition-title, .error .admonition-title, .important .admonition-title {
+    font-weight: bold;
+    font-size: 1.1em;
+    color: #3e0909; }
+
+.codehilite {
+  background: none repeat scroll 0 0 #f8f8f8;
+  border: 1px solid #cccccc;
+  font-family: Monospace;
+  border-radius: 4px 4px 4px 4px;
+  padding-left: 10px;
+  padding-right: 10px; }
+
 body {
+  font-family: Sans-serif;
   width: 100%;
   background-color: #333333;
-  color: #cccccc; }
+  color: #b3b3b3; }
 
 #footer {
   font-size: 0.6em;
@@ -11,6 +68,10 @@ body {
 
 h1 {
   color: white; }
+
+h2 {
+  color: white;
+  border-bottom: solid #d9d9d9 1px; }
 
 #md-edit {
   position: absolute;
