Multi user editing finally functional

--- a/markpad/templates/base.html
+++ b/markpad/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Markpad</title>
         <link rel="stylesheet" href="/static/screen.css">
         <link rel="stylesheet" href="/static/pygments.css">
