--- a/markpad/static/screen.sass
+++ b/markpad/static/screen.sass
@@ -1,10 +1,11 @@
 $base_color : #333
-
 $code_color: #900
+$txt_color: lighten($base_color, 50%)
+
 
 @mixin code
-    background: none repeat scroll 0 0 #F8F8F8
-    border: 1px solid #CCCCCC
+    background: none repeat scroll 0 0 lighten($base_color, 20%)
+    border: 1px solid darken($base_color, 20%)
     font-family: Monospace
     border-radius: 4px 4px 4px 4px
 
@@ -49,7 +50,7 @@ body
     font-family: Sans-serif
     width: 100%
     background-color: $base_color
-    color: lighten($base_color, 50%)
+    color: $txt_color
 
 #footer
     font-size: 0.6em
@@ -59,11 +60,11 @@ body
         right: auto
 
 h1
-    color: lighten($base_color, 90%)
+    color: lighten($txt_color, 30%)
 
 h2
-    color: lighten($base_color, 80%)
-    border-bottom: solid lighten($base_color, 65%) 1px
+    color: lighten($txt_color, 20%)
+    border-bottom: solid lighten($txt_color, 10%) 1px
 
 #md-edit
     position: absolute
