--- a/markpad/templates/doc.view.html
+++ b/markpad/templates/doc.view.html
@@ -3,6 +3,10 @@
 {% block content %}
 <div id="navbar">
     <!-- I still have to define what goes here -->
+    <!-- 
+    Link to edit
+    link to pdf
+    -->
 </div>
 <div id="rendered-markdown">
     {{ rendered_md }}
