fixed logging, fixed incorrect static URL

--- a/markpad/templates/base.html
+++ b/markpad/templates/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Markpad</title>
-        <link rel="stylesheet" href="url_for('static', filename='screen.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='screen.css')}}">
         <link rel="stylesheet" href="{{url_for('static', filename='pygments.css')}}">
         <script src="{{url_for('static', filename='jquery.min.js')}}"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.01/ace.js"></script>
