--- a/markpad/static/screen.sass
+++ b/markpad/static/screen.sass
@@ -33,7 +33,7 @@ $txt_color: lighten($base_color, 50%)
 .attention, .caution, .warning
     @include admonition-base(#FFCD42)
 
-.note, .tip, .hint
+.note, .tip, .hint, .info
     @include admonition-base(#E8E8FF)
 
 .danger, .error, .important
@@ -44,8 +44,6 @@ $txt_color: lighten($base_color, 50%)
     padding:
         left: 10px
         right: 10px
-    margin:
-        right: 15px
 
 
 body
